[backend] Fix scripts